Fixed some issues with unit 7

--- a/unit_07-networking-containers/slides/index.html
+++ b/unit_07-networking-containers/slides/index.html
@@ -77,7 +77,7 @@
 								<li class="fragment highlight-current-blue visible" data-fragment-index="1">Networking Overview</li>
 								<li class="fragment highlight-current-blue visible" data-fragment-index="2">Enabling Container Networking</li>
 								<li class="fragment highlight-current-blue visible" data-fragment-index="3">Legacy Networking</li>
-								<li class="fragment highlight-current-blue visible" data-fragment-index="4">Common Network Model</li>
+								<li class="fragment highlight-current-blue visible" data-fragment-index="4">Container Network Model</li>
 								<li class="fragment highlight-current-blue visible" data-fragment-index="5">The docker network Commands</li>
 								<li class="fragment highlight-current-blue visible" data-fragment-index="6">Network Types</li>
 								<li class="fragment highlight-current-blue visible" data-fragment-index="7">Exposing Container Ports</li>
@@ -236,10 +236,10 @@
 
 				<section>
 					<div>
-						<h2>Common Network Model</h2>
+						<h2>Container Network Model</h2>
 					</div>
 					<div>
-						<img src="media/Common_Network_Model.svg" alt="Common Network Model" />
+						<img src="media/Container_Network_Model.svg" alt="Container Network Model" />
 					</div>
 					<div>
 						<p>Endpoints connect a container's sandbox to a network</p>
